--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -114,6 +114,9 @@
         }
       }
     </script>
+
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+
     <!-- uncomment this for adding service worker
     <script>
       if ('serviceWorker' in navigator) {
